# appear-game-jam-2025-spring

./: .aiignore  .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
asset-sources/palettes/: general.pal  general.palettepal
asset-sources/sprites/: attack.aseprite  chest_simple.aseprite  guy.aseprite  lever.aseprite
asset-sources/sprites/enemies/: bob.aseprite  bounce_fly.aseprite  bunny.aseprite  egg.aseprite  eggspitter.aseprite  springer.aseprite  the_what.aseprite
asset-sources/sprites/items/: heart.aseprite
asset-sources/sprites/scenery/: bonfire.aseprite  box_1.aseprite  door_1.aseprite  easteregg.aseprite  fireplace.aseprite  lamp_post.aseprite  pedestal.aseprite  pedestal_pickup.aseprite  platform_1.aseprite  reeds.aseprite  rock_wall.aseprite  sign.aseprite
asset-sources/sprites/ui/: healthbar.aseprite  pogo_icon.aseprite  powerup_bg.aseprite  rolling_icon.aseprite  title.aseprite
asset-sources/tilesets/: nexus-mix.aseprite
crates/bevy-wasmer-scripting/: Cargo.toml
crates/bevy-wasmer-scripting/src/: lib.rs  scripted_entity.rs  wasm_script_asset.rs
crates/game/: Cargo.toml  build.rs  build_assets.sh  build_debug.sh  build_release.sh  release.sh  run_with_script_rebuild.sh
crates/game/assets/entities/: entities.toml
crates/game/assets/maps/grayboxes/nexus_ldtk/: nexus.ldtk
crates/game/assets/palettes/: general.pal  general.palettepal
crates/game/assets/shaders/: fog.wgsl
crates/game/assets/sprites/: animated.sprites.toml  attack.aseprite  chest_simple.aseprite  fly.aseprite  guy.aseprite  terminal.aseprite  thing.aseprite
crates/game/assets/sprites/enemies/: bounce_fly.aseprite  the_what.aseprite
crates/game/assets/sprites/items/: heart.aseprite
crates/game/assets/sprites/scenery/: house_1.aseprite  lamp_post.aseprite  nexus_bg.aseprite  reeds.aseprite  rock_wall.aseprite  sign_diag_up.aseprite
crates/game/assets/textures/: fog.kra
crates/game/assets/tilesets/: nexus-mix.aseprite
crates/game/assets/ui/: action_ui.aseprite  healthbar.aseprite  heart.aseprite
crates/game/src/: main.rs
crates/game/src/systems/: init_game.rs
crates/gamejam-bevy-components/: Cargo.toml
crates/gamejam-bevy-components/src/: lib.rs
crates/gamejam-platform-controller/: Cargo.toml
crates/gamejam-platform-controller/src/: game_resources.rs  lib.rs  player_components.rs  player_const_rules.rs
crates/gamejam-platform-controller/src/audio/: audio_components.rs  audio_levels_system.rs  game_audio_plugin.rs  mod.rs  music_system.rs
crates/gamejam-platform-controller/src/combat/: attackable.rs  combat_components.rs  enemy.rs  hit_points.rs  mod.rs  projectiles.rs  scheduled_attack_system.rs  stamina_system.rs  stats_system.rs
crates/gamejam-platform-controller/src/enemies/: attackable.rs  combat_components.rs  enemy.rs  enemy_state_machine.rs  hit_points.rs  mod.rs  scheduled_attack_system.rs  sleeping.rs
crates/gamejam-platform-controller/src/game_entities/file_formats/: game_entity_definitions.rs  mod.rs
crates/gamejam-platform-controller/src/graphics/: animation_system.rs  mod.rs  sprite_collection.rs
crates/gamejam-platform-controller/src/graphics/materials/: fog_material.rs  mod.rs
crates/gamejam-platform-controller/src/input_systems/: gamepad_input.rs  input_plugin.rs  keyboard_input_system.rs  mod.rs
crates/gamejam-platform-controller/src/ldtk_entities/: chest.rs  game_entity.rs  interactable.rs  level_transition.rs  mod.rs  player_collidable_entity.rs  player_spawn.rs  rubble.rs
crates/gamejam-platform-controller/src/levels/: levels_plugin.rs  mod.rs
crates/gamejam-platform-controller/src/main_menu/: main_menu_components.rs  main_menu_plugin.rs  main_menu_system.rs  menu_input_system.rs  mod.rs
crates/gamejam-platform-controller/src/movement_systems/: direction_system.rs  grounded_system.rs  mod.rs  movement_components.rs  movement_dampening_system.rs  movement_plugin.rs  movement_system.rs  timed_linear_velocity_system.rs
crates/gamejam-platform-controller/src/player_systems/: bonfire.rs  grounded_system.rs  mod.rs  movement_dampening_system.rs  player_attack_system.rs  player_components.rs  player_control_system.rs  player_health.rs  player_spawn_system.rs
crates/gamejam-platform-controller/src/scripting/: create_entity_script.rs  mod.rs  script_entity_command_queue.rs  scripted_game_entity.rs
crates/gamejam-platform-controller/src/scripting/components/: game_entity.wit  game_host.wit  interactable.wit
crates/gamejam-platform-controller/src/timing/: mod.rs  timer_system.rs  timing_component.rs
crates/gamejam-platform-controller/src/ui/: boss_health.rs  game_ui.rs  interactable_hint.rs  mod.rs  powerup_ui.rs  stat_bar.rs  stats_ui.rs
crates/script-wasi-components/components/: game_entity.wit  game_entity_interface.wit  game_host.wit  interactable.wit
crates/script-wasi-components/scripted-game-entity/: Cargo.toml  build.rs
crates/script-wasi-components/scripted-game-entity/src/: lib.rs
crates/scripts/: Cargo.toml  build_scripts.sh
crates/scripts/.cargo/: config.toml
crates/scripts/door-script/: Cargo.toml
crates/scripts/door-script/src/: lib.rs
crates/scripts/enemies/: Cargo.toml
crates/scripts/enemies/src/: egg_projectile.rs  egg_spitter.rs  enemy_biped.rs  enemy_bunny.rs  simple_enemy.rs  springer.rs
crates/scripts/game-entities/door-script/: Cargo.toml
crates/scripts/game-entities/lever-script/: Cargo.toml
crates/scripts/game-entities/platform-script/: Cargo.toml
crates/scripts/game-entities/rubble-script/: Cargo.toml
crates/scripts/game-entities/test-entity-script/: Cargo.toml
crates/scripts/game-entity-component/: Cargo.toml
crates/scripts/game-entity-component/src/: lib.rs
crates/scripts/lever-script/: Cargo.toml
crates/scripts/misc-entities/: Cargo.toml
crates/scripts/misc-entities/src/: bonfire.rs  door.rs  easteregg.rs  game_level.rs  lever.rs  platform.rs  powerup.rs  rubble.rs  test_entity.rs
crates/scripts/script-utils/: Cargo.toml
crates/scripts/test-entity-script/: Cargo.toml
crates/simple-2d-camera/src/: lib.rs
gdd/: index.md
(+10 files in other folders)
