[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
avian-debug = []
inspector = []

[dependencies]
avian2d.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_ecs_ldtk.workspace = true
simple-2d-camera = { path = "../simple-2d-camera" }
gamejam-platform-controller = { path = "../gamejam-platform-controller" }