[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"
exclude = ["./assets"]

[features]
default = ["fps"]
avian-debug = []
inspector = ["bevy-inspector-egui"]
fps = ["bevy/bevy_dev_tools"]

[dependencies]
avian2d.workspace = true
bevy.workspace = true
bevy-inspector-egui = { workspace = true, optional = true}
bevy_ecs_ldtk.workspace = true
simple-2d-camera = { path = "../simple-2d-camera" }
gamejam-platform-controller = { path = "../gamejam-platform-controller" }