[package]
name = "gamejam-platform-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
avian2d.workspace = true
bevy.workspace = true
bevy_asset_loader = { workspace = true, features = ["2d"] }
bevy_asset_loader_derive.workspace = true
bevy_common_assets.workspace = true
bevy_ecs_ldtk.workspace = true
bevy_framepace.workspace = true
bevy_trauma_shake.workspace = true
haalka.workspace = true
simple-2d-camera = { path = "../simple-2d-camera" }
serde.workspace = true
serde_json.workspace = true