[package]
name = "gamejam-platform-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
avian2d.workspace = true
bevy.workspace = true
bevy_asset_loader = { workspace = true, features = ["2d"] }
bevy_common_assets.workspace = true
bevy_ecs_ldtk.workspace = true
bevy_framepace.workspace = true
bevy_prng.workspace = true
bevy_rand.workspace = true
bevy_trauma_shake.workspace = true
bevy_wasmer_scripting = { path = "../bevy-wasmer-scripting" }
gamejam-bevy-components = { path = "../gamejam-bevy-components" }
haalka.workspace = true
rand_core.workspace = true
simple-2d-camera = { path = "../simple-2d-camera" }
scripted-game-entity = { path = "../script-wasi-components/scripted-game-entity" }
serde.workspace = true
wasmtime.workspace = true
wit-component.workspace = true