[package]
name = "enemies"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simple_enemy"
path = "src/simple_enemy.rs"

[[bin]]
name = "enemy_biped"
path = "src/enemy_biped.rs"

[[bin]]
name = "enemy_springer"
path = "src/springer.rs"

[[bin]]
name = "egg_spitter"
path = "src/egg_spitter.rs"

[[bin]]
name = "egg_projectile"
path = "src/egg_projectile.rs"

[[bin]]
name = "enemy_bunny"
path = "src/enemy_bunny.rs"

[dependencies]
game-entity-component = { path = "../game-entity-component" }
glam.workspace = true
script-utils = { path = "../script-utils" }
